confdeployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-deployment
  namespace: my-namespace
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mon-application
  template:
    metadata:
      labels:
        app: mon-application
    spec:
      containers:
      - name: nginx
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
